Update theme info text

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: DCDC Module Template
-Theme URI: https://wpcom-themes.svn.automattic.com/_s/
-Author: Automattic
-Author URI: http://automattic.com/
-Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
-Version: 1.1-wpcom
+Theme URI: http://hawaii.edu/coe/dcdc/
+Author: Justin Hedani, Dr. Paul Ryan and the Automattic Team
+Author URI: http://hawaii.edu/coe/dcdc/
+Description: The supreme course creation tool designed to make teaching online just as hassle free as teaching face-to-face.
+Version: 1.0
 License: GNU General Public License
 License URI: license.txt
 Tags:
