Update sidebar logo handling
Greatly improved the handling of how the logos for various institutions
were loaded in the previewer and also the styling across various
responsive layouts.

--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -107,11 +107,11 @@ header#navbar {
 			margin-bottom: 20px;
 			padding-bottom: 24px;
 			border-bottom: 1px solid #FFF;
-			&[data-affil=default] { img { margin: -588px 0 0 0; } }
-			&[data-affil=system] { img { margin: -588px 0 0 0; } }
-			&[data-affil=manoa] { img { margin: -478px 0 0 0; } }
-			&[data-affil=hcc] { height: 86px; img { margin: -702px 0 0 0; } }
-			&[data-affil=kcc] { height: 86px; img { margin: -702px 0 0 0;} }
+			// &[data-affil=default] { img { margin: -588px 0 0 0; } }
+			// &[data-affil=system] { img { margin: -588px 0 0 0; } }
+			// &[data-affil=manoa] { img { margin: -478px 0 0 0; } }
+			// &[data-affil=hcc] { height: 86px; img { margin: -702px 0 0 0; } }
+			// &[data-affil=kcc] { height: 86px; img { margin: -702px 0 0 0;} }
 		}
 		.welcome { font-size: 25px; }
 		h1 { font-size: 51px; font-weight: normal; margin: 11px 0 19px 0; } // Course Number
@@ -359,13 +359,6 @@ body.units-modules-lessons {
 	#main {
 		.intro-banner {
 			h1 { font-size: 48px; }
-			.college-branding {
-				&[data-affil=default] { img { margin: -448px 0 0 0; } }
-				&[data-affil=system] { img { margin: -448px 0 0 0; } }
-				&[data-affil=manoa] { img { margin: -363px 0 0 0; } }
-				&[data-affil=hcc] { height: 86px; img { margin: -539px 0 0 0; } }
-				&[data-affil=kcc] { height: 86px; img { margin: -539px 0 0 0;} }
-			}
 		}
 	}
 	body.modules-lessons {
@@ -397,13 +390,6 @@ body.units-modules-lessons {
 	#main {
 		.intro-banner {
 			h1 { font-size: 45px; }
-			.college-branding {
-				&[data-affil=default] { img { margin: -423px 0 0 0; } }
-				&[data-affil=system] { img { margin: -423px 0 0 0; } }
-				&[data-affil=manoa] { img { margin: -344px 0 0 0; } }
-				&[data-affil=hcc] { height: 86px; img { margin: -511px 0 0 0; } }
-				&[data-affil=kcc] { height: 86px; img { margin: -511px 0 0 0;} }
-			}
 		}
 		//#secondary { display: none; }
 		footer { width: 100%; }
