--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -6832,11 +6832,13 @@ header#navbar .navbar-inner nav .caret {
   position: relative;
 }
 #main .intro-banner .college-branding {
-  height: 39px;
+  height: 73px;
   overflow: hidden;
   margin-bottom: 20px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #FFF;
+}
+#main .intro-banner .college-branding img {
+  margin-top: -6px;
 }
 #main .intro-banner .welcome {
   font-size: 25px;
