--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -9,7 +9,10 @@
 @import "dcdcBootstrap.less";
 
 // If navbar is static on top
-@media (min-width: @navbarCollapseWidth) { body { padding-top: 60px; } }
+@media (min-width: @navbarCollapseWidth) {
+	body { padding-top: 0;}
+	#main { padding-top: 60px; }
+}
 
 //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
 //#grid > .core > .span(5);
@@ -31,6 +34,7 @@
  */
 
 h1.site-title a:visited { color: @grayLighter; }
+hr { clear: both; }
 .helper-text {
 	a,
 	a:link,
@@ -63,11 +67,11 @@ body > img.full-background-image {
 }
 
 // http://www.cssstickyfooter.com/using-sticky-footer-code.html
-// html, body { height: 100%; }
-// #page { min-height: 100% }
-// #main { overflow: auto; padding-bottom: 71px; /* Must be the same height as the footer */ }
-// footer#colophon { position: relative; margin-top: -71px; height: 71px; clear: both; }
-// /* Opera Fix */ body:before { content: ""; height: 100%; float: left; width: 0; margin-top: -32767; }
+html, body { height: 100%; margin-top: 0 !important; }
+#page { min-height: 100% }
+#main { padding-bottom: 71px; /* Must be the same height as the footer */ }
+footer#colophon { position: relative; margin-top: -71px; height: 70px; clear: both; }
+/* Opera Fix */ //body:before { content: ""; height: 100%; float: left; width: 0; margin-top: -32767; }
 
 header#navbar { 
 	#mixin > .shadow(0 0 8px 1px, #111, false);
@@ -104,15 +108,14 @@ header#navbar {
 		background-color: #1B1B1B;
 		color: #FFF;
 		position: relative;
+		#mixin > .shadow(2px 2px 8px 0, #444, false);
+		.border-radius(3px);
 		.college-branding {
 			height: 73px;
 			overflow: hidden;
 			margin-bottom: 20px;
 			border-bottom: 1px solid #FFF;
-			img {
-				margin-top: -6px;
-
-			}
+			img { margin-top: -6px; }
 			// &[data-affil=default] { img { margin: -588px 0 0 0; } }
 			// &[data-affil=system] { img { margin: -588px 0 0 0; } }
 			// &[data-affil=manoa] { img { margin: -478px 0 0 0; } }
@@ -136,11 +139,17 @@ header#navbar {
 	}
 	.no-content {
 		//height: 200px;
+		height: 100%;
+		box-sizing:border-box;
+		-moz-box-sizing:border-box; /* Firefox */
+		-webkit-box-sizing:border-box; /* Safari */
 		padding: 20px 15px;
 		text-align: center;
-		border: 4px dashed #CCC;
+		//border: 4px dashed #CCC;
 		font-size: 16px;
 		color: @gray;
+		background-color: @grayLighter;
+		.box-shadow(inset 0 1px 8px rgba(0,0,0,.5));
 		.border-radius(4px); 
 		span.plus { display: block; clear: both; font-size: 120px; line-height: 0; margin: 35px 0 48px; }
 		a {
@@ -163,7 +172,11 @@ header#navbar {
 		background: url('../images/edit-gear.png') no-repeat;
 	}
 	#content {
-		span.moduleCount { color: @gray; font-size: 16px; }
+		.modules { // Module Page
+			h1.entry-title { margin: 0 0 7px 0; float: left; clear: none; }
+			span.moduleCount { font-size: 36px; line-height: 40px; float: left; }
+		}
+		span.moduleCount { color: @grayLight; font-size: 16px; }
 		h1.entry-title { margin: 2px 0 7px }
 		.entry-content {
 			min-height: 300px;
@@ -203,7 +216,11 @@ header#navbar {
 	} // #secondary
 	footer.entry-meta {
 		margin: 0;
+		border: none;
 		ol.pager {
+			border-top: 1px solid #CCC;
+			padding-top: 20px;
+			margin-top: 0;
 			li {
 				a {background-color: #3A87AD; color: @white;
 					&:hover { background-color: #296887; }
@@ -214,7 +231,9 @@ header#navbar {
 }
 footer {
 	margin: 10px 0 0 0;
-	&#colophon { background-color: @grayLighter; }
+	&#colophon { background-color: @grayLighter; padding: 0;
+		.container { margin-top: 15px; }
+	}
 }
 
 // Course Template Styles: Modules & Lessons
@@ -229,6 +248,9 @@ body.modules-lessons {
 						margin-bottom: 20px;
 						background-color: @gray;
 						position: relative;
+						overflow: hidden;
+						#mixin > .shadow(1px 0px 9px 0, #888, false);
+						.border-radius(3px);
 					a.edit-post-link { display: none; min-height: 0; }
 					& > a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0; &:hover { text-decoration: none; }
 						.module-count { padding: 10px 15px; background-color: @grayDarker; }
@@ -236,8 +258,9 @@ body.modules-lessons {
 						.module-image { margin: 10px 15px; max-height: 128px; overflow: hidden; }
 						.module-content { margin: 10px 15px; }
 					}
-					&.last { background: none; } // Clear background color for "+ Content" list item
+					&.last { background: none; .box-shadow(inset 0 1px 8px rgba(0,0,0,.5)); } // Clear background color for "+ Content" list item
 					.no-content {
+						padding: 50px 15px 15px;
 						a { min-height: 0; margin: 20px 0 22px 0; }
 					}
 				}
@@ -300,18 +323,29 @@ body.modules-lessons {
 // Course Template Styles: Units, Modules & Lessons
 body.units-modules-lessons {
 	#main { // Increase specificity
-		ol.units { margin: 0;
-			li.unit { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; background-color: @grayLighter; padding-bottom: 10px;
+		ol.units {
+			margin: 0;
+			li.unit {
+				list-style: none;
+				margin: 0 0 20px 0;
+				color: @gray;
+				display: block;
+				min-height: 184px;
+				background-color: @grayLighter;
+				overflow: hidden;
+				#mixin > .shadow(1px 0px 9px 0, #888, false);
+				.border-radius(3px);
 				.unit-title-wrapper { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; overflow: hidden;
 					.unit-count { float: left; margin: 0 10px 0 0; }
 					.unit-title { font-weight: normal; font-size: 18px; line-height: 20px; margin: 0px; float: left; clear: none; }
 				}
-				&.last { background: none; } // Clear background color for "+ Content" list item
+				&.last { background: none; .box-shadow(inset 0 1px 8px rgba(0,0,0,.5)); padding: 0; } // Clear background color for "+ Content" list item
 			}
 		}
 		ol.modules {
+			overflow: hidden;
 			margin: 10px;
-			li.module { list-style: none; margin-bottom: 20px; background-color: @gray; position: relative; min-height: 250px;
+			li.module { list-style: none; background-color: @gray; position: relative; min-height: 250px; .border-radius(3px); overflow: hidden;
 				a.edit-post-link { display: none; min-height: 0; z-index: 3; }
 				a { color: @white; min-height: 184px; &:hover { text-decoration: none; }
 					.module-title-wrapper {
@@ -321,17 +355,21 @@ body.units-modules-lessons {
 						.module-title { font-weight: normal; font-size: 22px; line-height: 1.3; display: block; }
 					}
 					.module-image {
-						//img { position: absolute; z-index: -1; }
+						height: 100%;
+						background: url('../images/notToSize.jpg');
 						overflow: hidden;
 						max-width: none;
-						img { height: 100%; }
-						.module-image-placeholder { position: absolute; background: url('../images/image-icon.png') center 45px no-repeat; height: 100%; padding: 170px 15px 0; text-align: center; }
+						.module-image-placeholder { position: absolute; background: url('../images/image-icon.png') center 45px no-repeat #555; height: 100%; padding: 170px 15px 0; text-align: center; }
 					}
 					.module-content { margin: 10px 15px; }
 				}
 				&:nth-child(3n+1) { margin-left: 0; }
 				&.last { background: none; } // Clear background color for "+ Content" list item
 				.no-content {
+					height: 100%;
+					box-sizing:border-box;
+					-moz-box-sizing:border-box; /* Firefox */
+					-webkit-box-sizing:border-box; /* Safari */
 					a { min-height: 0; margin: 28px 0 22px 0; }
 				}
 			}
@@ -353,7 +391,10 @@ body.units-modules-lessons {
 	body.modules-lessons {
 		&.single-layout {
 			ol.modules li.module {
-				&:nth-child(1) { display: none; } //#inline-intro-banner
+				&:nth-child(1) {
+					display: none;
+					#inline-intro-banner { display: none; .border-radius(3px); }
+				}
 				&:nth-child(3n+2) { margin-left: 0; }
 			}
 		}
@@ -364,6 +405,7 @@ body.units-modules-lessons {
 @media (max-width: 1200px) and (min-width: 979px) {
 	#main {
 		.intro-banner {
+			.college-branding { height: 56px; }
 			h1 { font-size: 48px; }
 		}
 	}
@@ -371,7 +413,10 @@ body.units-modules-lessons {
 		&.single-layout {
 			#main {
 				ol.modules li.module {
-					&:nth-child(1) { display: none; } //#inline-intro-banner
+					&:nth-child(1) {
+						display: none;
+						#inline-intro-banner { display: none; }
+					} //#inline-intro-banner
 					&:nth-child(3n+2) { margin-left: 0; }
 				}
 			}
@@ -395,6 +440,7 @@ body.units-modules-lessons {
 	}
 	#main {
 		.intro-banner {
+			.college-branding { height: 56px; }
 			h1 { font-size: 45px; }
 		}
 		//#secondary { display: none; }
@@ -476,6 +522,16 @@ body.units-modules-lessons {
 	body.units-modules-lessons {
 		#main {
 			#intro-banner { display: none; }
+			ol.modules {
+				li.module a {
+					.module-title-wrapper { width: 100%; }
+					.module-image {
+						.module-image-placeholder {
+							width: 100%;
+						}
+					}
+				}
+			}
 		}
 	}
 }
