--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -344,8 +344,8 @@ body.units-modules-lessons {
 		}
 		ol.modules {
 			overflow: hidden;
-			margin: 10px;
-			li.module { list-style: none; background-color: @gray; position: relative; min-height: 250px; .border-radius(3px); overflow: hidden;
+			margin: 10px 10px 0 10px;
+			li.module { list-style: none; background-color: @gray; position: relative; min-height: 250px; .border-radius(3px); margin-bottom: 10px; overflow: hidden;
 				a.edit-post-link { display: none; min-height: 0; z-index: 3; }
 				a { color: @white; min-height: 184px; &:hover { text-decoration: none; }
 					.module-title-wrapper {
