add changelog and modify theme name in style.css (should be a template to replace).

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: DCDC Module Template
+Theme Name: DCDC Course - XYZ 123
 Theme URI: http://hawaii.edu/coe/dcdc/
 Author: Justin Hedani, Dr. Paul Ryan and the Automattic Team
 Author URI: http://hawaii.edu/coe/dcdc/
