--- a/samplechildtheme/style.css
+++ b/samplechildtheme/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: DCDC Course - XYZ 123
+Theme Name: DCDC Course Child - XYZ 123
 Theme URI: http://hawaii.edu/coe/dcdc/
 Author: Justin Hedani, Dr. Paul Ryan and the Automattic Team
 Author URI: http://hawaii.edu/coe/dcdc/
