--- a/samplechildtheme/less/course-style-config.less
+++ b/samplechildtheme/less/course-style-config.less
@@ -9,48 +9,48 @@
  */
 
 // CSS Reset
-@import "../bootstrap/less/reset.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/reset.less";
 
 // Core variables and mixins
-@import "../bootstrap/less/variables.less";
-@import "../bootstrap/less/mixins.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/variables.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/mixins.less";
 
 // Grid system and page structure
-@import "../bootstrap/less/scaffolding.less";
-@import "../bootstrap/less/grid.less";
-@import "../bootstrap/less/layouts.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/scaffolding.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/grid.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/layouts.less";
 
 // Base CSS
-@import "../bootstrap/less/type.less";
-@import "../bootstrap/less/forms.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/type.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/forms.less";
 
 // Components: common
-@import "../bootstrap/less/sprites.less";
-@import "../bootstrap/less/dropdowns.less";
-@import "../bootstrap/less/component-animations.less";
-@import "../bootstrap/less/close.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/sprites.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/dropdowns.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/component-animations.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/close.less";
 
 // Components: Buttons & Alerts
-@import "../bootstrap/less/buttons.less";
-@import "../bootstrap/less/button-groups.less";
-@import "../add-ons/less/alerts.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/buttons.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/button-groups.less";
+@import "../../wp-theme-course-parent/inc/add-ons/less/alerts.less";
 
 // Components: Popovers;
-@import "../bootstrap/less/popovers.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/popovers.less";
 
 // Components: Nav
-@import "../bootstrap/less/navs.less";
-@import "../bootstrap/less/navbar.less";
-@import "../bootstrap/less/breadcrumbs.less";
-@import "pager.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/navs.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/navbar.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/breadcrumbs.less";
+@import "../../wp-theme-course-parent/inc/less/pager.less";
 
 // Add-ons
 //@import "../add-ons/less/tables.less"; // Example: If you wanted to use the bootstrap tables style;
 
 // Reponsive Layout REQUIRES: add-ons/js/bootstrap-collapse.js;
-@import "../bootstrap/less/bootstrap-responsive.less"; // Comment out if you don't need a responsive layout
+@import "../../wp-theme-course-parent/inc/bootstrap/less/bootstrap-responsive.less"; // Comment out if you don't need a responsive layout
 
 // Utility classes
-@import "../bootstrap/less/custom-conventions.less";
-@import "../bootstrap/less/utilities.less"; // Has to be last to override when necessary
+@import "../../wp-theme-course-parent/inc/bootstrap/less/custom-conventions.less";
+@import "../../wp-theme-course-parent/inc/bootstrap/less/utilities.less"; // Has to be last to override when necessary
 @import "course-style-variables.less";
