--- a/samplechildtheme/less/course-style.less
+++ b/samplechildtheme/less/course-style.less
@@ -9,4 +9,4 @@ This LESS file should compile to course-style.css (../css/course-style.css)
 
 // Pull in bootstrap mixins/custom-conventions to use in custom styles
 //@import "course-style-config.less";
-@import "course-style-variables.less";
+@import "course-style-config.less";
