--- a/inc/css/course_global_sortable.css
+++ b/inc/css/course_global_sortable.css
@@ -11,7 +11,6 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7f7f7', endColorstr='#e7e7e7'); /* for IE */
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#e7e7e7)); /* for webkit browsers */
     background: -moz-linear-gradient(top,  #f7f7f7,  #e7e7e7); /* for firefox 3.6+ */
-    cursor: move;
     
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -40,6 +39,17 @@
   background: #f0f0f0;
   border: 1px dashed #ddd;
   visibility: visible !important;
+}
+
+.toplevel_page_global-sort #wpbody .handle {
+  cursor: move;
+}
+.toplevel_page_global-sort #wpbody .detach {
+  cursor: pointer;
+}
+.toplevel_page_global-sort #wpbody #toc-free-modules .detach,
+.toplevel_page_global-sort #wpbody #toc-free-lessons .detach {
+  display: none;
 }
 
 /* Top-Level Admin menu item icon */
